# kaguya

./: .gitignore  .spotify_cache  Music_Recommender.ipynb  TEST_README.md  backend.py  flake.nix  main.py  next.config.ts  openapi.json  package.json  pnpm-lock.yaml  pyproject.toml  run_simple_tests.sh  start.sh  start_backend.sh  test_simple.py
.cursor/rules/: nextjs.mdc
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/mood-and-playlist/: route.ts
src/app/api/mood-detection/: route.ts
src/app/api/playlist/[mood]/: route.ts
src/app/live/: page.tsx
src/components/mood/: home-interface.tsx  live-mood-interface.tsx
src/components/ui/: navbar.tsx  text-animate.tsx
